--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,17 +1,12 @@
 {
-  "name": "flat",
+  "name": "Portfolio",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [
-    {
-      "path": "css/flat.css",
-      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"css/flat-dist.css\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
-    }
-  ],
+  "fileConfigs": [],
   "fileTree": {
     "expandedDirs": [
-      "scss",
-      "css"
+      "Portfolio",
+      "Portfolio/scss"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -27,16 +22,19 @@
   },
   "imports": [
     {
-      "path": "scss/flat.scss",
+      "path": "Portfolio/scss/flat.scss",
       "imports": [
-        "scss/blocks/header.scss",
-        "scss/blocks/slick-header.scss",
-        "scss/blocks/home.scss",
-        "scss/blocks/nav.scss",
-        "scss/blocks/services.scss",
-        "scss/blocks/item-service.scss",
-        "scss/blocks/about.scss",
-        "scss/blocks/about-profiles.scss"
+        "Portfolio/scss/blocks/header.scss",
+        "Portfolio/scss/blocks/slick-top.scss",
+        "Portfolio/scss/blocks/home.scss",
+        "Portfolio/scss/blocks/nav.scss",
+        "Portfolio/scss/blocks/services.scss",
+        "Portfolio/scss/blocks/item-service.scss",
+        "Portfolio/scss/blocks/about.scss",
+        "Portfolio/scss/blocks/work.scss",
+        "Portfolio/scss/blocks/contact.scss",
+        "Portfolio/scss/blocks/footer.scss",
+        "Portfolio/scss/blocks/intro.scss"
       ]
     }
   ],
@@ -165,7 +163,7 @@
   "file-type-slim": "{\"compilers\":[\"slim\"]}",
   "file-type-coffee-script": "{\"compilers\":[\"coffee-script\",\"uglify-js\"]}",
   "file-type-livescript": "{\"compilers\":[\"livescript\",\"uglify-js\"]}",
-  "file-type-kit": "{\"compilers\":[\"kit\"]}",
+  "file-type-kit": "{\"compilers\":[\"kit\"],\"autoCompile\":true,\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegments\":[\"kit\"],\"replaceSegmentsWith\":\"html\",\"relative\":\"\"},\"compiler-kit\":{\"enabled\":true}}",
   "uglify-js": {
     "ie8": false,
     "compress": {
