--- a/prepros-6.config
+++ b/prepros-6.config
@@ -6,7 +6,8 @@
   "fileTree": {
     "expandedDirs": [
       "Portfolio",
-      "Portfolio/scss"
+      "Portfolio/scss",
+      "scss"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -22,19 +23,19 @@
   },
   "imports": [
     {
-      "path": "Portfolio/scss/flat.scss",
+      "path": "scss/flat.scss",
       "imports": [
-        "Portfolio/scss/blocks/header.scss",
-        "Portfolio/scss/blocks/slick-top.scss",
-        "Portfolio/scss/blocks/home.scss",
-        "Portfolio/scss/blocks/nav.scss",
-        "Portfolio/scss/blocks/services.scss",
-        "Portfolio/scss/blocks/item-service.scss",
-        "Portfolio/scss/blocks/about.scss",
-        "Portfolio/scss/blocks/work.scss",
-        "Portfolio/scss/blocks/contact.scss",
-        "Portfolio/scss/blocks/footer.scss",
-        "Portfolio/scss/blocks/intro.scss"
+        "scss/blocks/header.scss",
+        "scss/blocks/slick-top.scss",
+        "scss/blocks/home.scss",
+        "scss/blocks/nav.scss",
+        "scss/blocks/services.scss",
+        "scss/blocks/item-service.scss",
+        "scss/blocks/about.scss",
+        "scss/blocks/work.scss",
+        "scss/blocks/contact.scss",
+        "scss/blocks/footer.scss",
+        "scss/blocks/intro.scss"
       ]
     }
   ],
